--- a/src/MusicTools/MusicianBundle/Resources/views/Profile/show.html.twig
+++ b/src/MusicTools/MusicianBundle/Resources/views/Profile/show.html.twig
@@ -1,5 +1,28 @@
 {% extends "::base.html.twig" %}
 
+{% set header_links = [
+    { label: 'Edit profile', icon: 'fa fa-fw fa-pencil',  url: path('musician_edit', {username: entity.username}) }
+] %}
+
+{% block content_title %}{{ entity.username }}{% endblock %}
+
 {% block content %}
-    <h1>Profile</h1>
+    <div class="row">
+        <div class="col-md-3">
+            {% if entity.avatar is not empty %}
+                <img src="{{ asset(resource_path(entity.avatar)) }}" class="img-responsive" />
+            {% else %}
+                <div class="text-center big-icon">
+                    <span class="fa fa-user"></span>
+                </div>
+            {% endif %}
+        </div>
+
+        <div class="col-md-9">
+            <div class="">
+
+            </div>
+            {{ entity.firstName }} {{ entity.lastName }}
+        </div>
+    </div>
 {% endblock %}
