current user menu

--- a/web/less/components/header.less
+++ b/web/less/components/header.less
@@ -10,9 +10,10 @@
 }
 
 .header {
-    z-index: 1;
+    z-index: 3;
     border: none;
     .box-shadow(none);
+    background: none;
 
     .navbar-brand {
         width: @sidebar-width;
