--- a/app/Resources/views/header-authenticated.html.twig
+++ b/app/Resources/views/header-authenticated.html.twig
@@ -6,7 +6,8 @@
                 <span class="sr-only">Toggle navigation</span>
                 <span class="fa fa-ellipsis-v"></span>
             </button>
-            <a class="navbar-brand" href="#"><span class="fa fa-user"></span></a>
+
+            {% include 'MusicToolsMusicianBundle:Musician:menu.html.twig' %}
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
