--- a/src/MusicTools/MusicianBundle/Resources/views/Profile/edit.html.twig
+++ b/src/MusicTools/MusicianBundle/Resources/views/Profile/edit.html.twig
@@ -1,7 +1,7 @@
 {% extends '::base.html.twig' %}
 
 {% set header_links = [
-    { label: 'Cancel',       icon: 'fa fa-fw fa-times', url: path('song_show', { id: entity.id }) },
+    { label: 'Cancel',       icon: 'fa fa-fw fa-times', url: path('musician_show', { username: entity.username }) },
     { label: 'Edit profile', icon: 'fa fa-fw fa-check', url: '' },
 ] %}
 
