add shadow to cover images

--- a/src/MusicTools/SongBookBundle/Resources/views/Song/index.html.twig
+++ b/src/MusicTools/SongBookBundle/Resources/views/Song/index.html.twig
@@ -22,7 +22,7 @@
                         <div class="row">
                             <div class="col-md-2 col-sm-3 col-xs-4 text-center">
                                 {% if entity.cover is not empty %}
-                                <img src="{{ asset(resource_path(entity.cover)) }}" class="img-responsive" />
+                                <img src="{{ asset(resource_path(entity.cover)) }}" class="img-responsive img-shadow" />
                                 {% else %}
                                 <div class="text-center big-icon">
                                     <span class="fa fa-music"></span>
