--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -32,45 +32,47 @@
 
     {# Content #}
     {% block content_container %}
-    <div class="content container-fluid {% block content_class %}{% endblock %}">
-        {# User messages #}
-        {% for message in app.session.getFlashBag.get('error') %}
-        <div class="alert alert-error">{{ message|trans }}</div>
-        {% endfor %}
+    <div class="content  {% block content_class %}{% endblock %}" data-scrollable="" style="position: relative;">
+        <div class="container-fluid">
+            {# User messages #}
+            {% for message in app.session.getFlashBag.get('error') %}
+            <div class="alert alert-error">{{ message|trans }}</div>
+            {% endfor %}
 
-        {% for message in app.session.getFlashBag.get('warning') %}
-        <div class="alert alert-warning">{{ message|trans }}</div>
-        {% endfor %}
+            {% for message in app.session.getFlashBag.get('warning') %}
+            <div class="alert alert-warning">{{ message|trans }}</div>
+            {% endfor %}
 
-        {% for message in app.session.getFlashBag.get('success') %}
-        <div class="alert alert-success">{{ message|trans }}</div>
-        {% endfor %}
+            {% for message in app.session.getFlashBag.get('success') %}
+            <div class="alert alert-success">{{ message|trans }}</div>
+            {% endfor %}
 
-        {# Page header #}
-        {% block content_header %}
-        <div class="content-header">
-            {# Page title #}
-            <h1>{% block content_title %}{% endblock %}</h1>
+            {# Page header #}
+            {% block content_header %}
+            <div class="content-header">
+                {# Page title #}
+                <h1>{% block content_title %}{% endblock %}</h1>
 
-            {# Breadcrumb #}
-            {% if breadcrumb_links is defined and breadcrumb_links is not empty %}
-            {#<ol class="breadcrumb">
-                {% for breadcrumb_link in breadcrumb_links %}
-                    {% if not loop.last %}
-                        &#123;&#35; Add link to page &#35;&#125;
-                        <li><a href="{{ breadcrumb_link.url }}">{{ breadcrumb_link.label|trans }}</a></li>
-                    {% else %}
-                        &#123;&#35; Add page label &#35;&#125;
-                        <li class="active">{{ breadcrumb_link.label|trans }}</li>
-                    {% endif %}
-                {% endfor %}
-            </ol>#}
-            {% endif %}
+                {# Breadcrumb #}
+                {% if breadcrumb_links is defined and breadcrumb_links is not empty %}
+                {#<ol class="breadcrumb">
+                    {% for breadcrumb_link in breadcrumb_links %}
+                        {% if not loop.last %}
+                            &#123;&#35; Add link to page &#35;&#125;
+                            <li><a href="{{ breadcrumb_link.url }}">{{ breadcrumb_link.label|trans }}</a></li>
+                        {% else %}
+                            &#123;&#35; Add page label &#35;&#125;
+                            <li class="active">{{ breadcrumb_link.label|trans }}</li>
+                        {% endif %}
+                    {% endfor %}
+                </ol>#}
+                {% endif %}
+            </div>
+            {% endblock %}
+
+            {# Page Content #}
+            {% block content %}{% endblock %}
         </div>
-        {% endblock %}
-
-        {# Page Content #}
-        {% block content %}{% endblock %}
     </div>
     {% endblock %}
 {% endblock %}
@@ -83,9 +85,14 @@
     </script>
 
     {# Angular JS #}
-    {% javascripts debug=false filter='jsmin' output='vendor/angular/angular-js.js'
-        '@ElorfinUserInterfaceBundle/Resources/public/js/libraries/angular/angular.min.js'
-        '@ElorfinUserInterfaceBundle/Resources/public/js/libraries/angular/angular-touch.min.js'
+    {% javascripts debug=false filter='jsmin' output='vendor/angular/angular.min.js'
+        '@ElorfinUserInterfaceBundle/Resources/public/libraries/angular/angular.min.js'
+        '@ElorfinUserInterfaceBundle/Resources/public/libraries/angular/angular-touch.min.js'
+        '@ElorfinUserInterfaceBundle/Resources/public/libraries/angular/angular-touch.min.js'
+        '@ElorfinUserInterfaceBundle/Resources/public/js/ScrollableDirective.js'
+        '@MusicToolsTheoryBundle/Resources/public/js/Note/*'
+        '@MusicToolsTheoryBundle/Resources/public/js/Note/Service/*'
+        '@MusicToolsTheoryBundle/Resources/public/js/Note/Directive/*'
         '@MusicToolsInstrumentBundle/Resources/public/js/Guitar/*'
         '@MusicToolsInstrumentBundle/Resources/public/js/Guitar/Directive/*'
         '@MusicToolsInstrumentBundle/Resources/public/js/GuitarNeck/*'
@@ -96,6 +103,9 @@
 
     <script type="text/javascript">
         angular.module('MusicTools', [
+            'ui.scrollable',
+
+            'Note',
             'Guitar',
             'GuitarNeck'
         ]);
