--- a/app/Resources/views/header-authenticated.html.twig
+++ b/app/Resources/views/header-authenticated.html.twig
@@ -15,6 +15,14 @@
             {# Guitar menu #}
             <guitar-menu class="nav navbar-nav"></guitar-menu>
 
+            <ul class="nav navbar-nav">
+                <li class="nav-link-default">
+                    <a href="" style="font-size: 28px;">
+                        &#9837;
+                    </a>
+                </li>
+            </ul>
+
             <ul class="nav navbar-nav navbar-right">
                 {# Collect header links of the current view #}
                 {% for header_link in header_links %}
