--- a/src/MusicTools/InstrumentBundle/Resources/public/partials/guitar-neck-widget.html
+++ b/src/MusicTools/InstrumentBundle/Resources/public/partials/guitar-neck-widget.html
@@ -1,7 +1,7 @@
 <div class="guitar-neck-widget">
     <canvas width="1000" height="300" style="margin-bottom: 15px;"></canvas>
 
-    <div class="row">
+    <div class="row" data-ng-show="false">
         <div class="col-md-6">
             <div class="h4">Configure frets display</div>
             <div class="panel panel-default">
