--- a/src/MusicTools/MusicianBundle/Resources/views/Musician/menu.html.twig
+++ b/src/MusicTools/MusicianBundle/Resources/views/Musician/menu.html.twig
@@ -26,6 +26,28 @@
         </li>
 
         <li>
+            <a href="#">
+                <span class="fa-stack">
+                    <i class="fa fa-circle-thin fa-stack-2x"></i>
+                    <i class="fa fa-envelope fa-stack-1x"></i>
+                </span>
+
+                My messages
+            </a>
+        </li>
+
+        <li>
+            <a href="#">
+                <span class="fa-stack">
+                    <i class="fa fa-circle-thin fa-stack-2x"></i>
+                    <i class="fa fa-trophy fa-stack-1x"></i>
+                </span>
+
+                My badges
+            </a>
+        </li>
+
+        <li>
             <a href="{{ path('musician_show', { username: app.user.username }) }}">
                 <span class="fa-stack">
                     <i class="fa fa-circle-thin fa-stack-2x"></i>
