--- a/src/MusicTools/TheoryBundle/Resources/views/Summary/index.html.twig
+++ b/src/MusicTools/TheoryBundle/Resources/views/Summary/index.html.twig
@@ -1,7 +1,8 @@
 {% extends '::base.html.twig' %}
 
-{% block content_title %}Theory{% endblock %}
+{% block content_title %}Theory <small>Summary</small>{% endblock %}
 
 {% block content %}
-    <guitar-neck-widget></guitar-neck-widget>
+    <a href="{{ path('theory_note') }}">Notes reference</a>
+    {#<guitar-neck-widget></guitar-neck-widget>#}
 {% endblock %}
