--- a/web/less/app.less
+++ b/web/less/app.less
@@ -23,6 +23,8 @@
 // Bundles styles
 @import "bundles/home";
 @import "bundles/user";
+@import "bundles/theory";
 @import "bundles/song_book";
 @import "bundles/guitar";
 @import "bundles/musician";
+@import "bundles/sheet_music";
