--- a/web/less/variables.less
+++ b/web/less/variables.less
@@ -668,9 +668,9 @@
 //##
 
 //** Background color on `.list-group-item`
-@list-group-bg:                 #fff;
+@list-group-bg:                 rgba(0, 0, 0, 0.25);
 //** `.list-group-item` border color
-@list-group-border:             #ddd;
+@list-group-border:             rgba(0, 0, 0, 0.25);
 //** List group border radius
 @list-group-border-radius:      @border-radius-base;
 
