--- a/web/less/theme.less
+++ b/web/less/theme.less
@@ -9,14 +9,14 @@ body {
     padding-top: @navbar-height;
 }
 
-.navbar {
+/*.navbar {
     .active {
         > a {
             border-bottom: 1px solid @brand-primary;
             padding-bottom: @navbar-padding-vertical - 1px;
         }
     }
-}
+}*/
 
 .dropdown-menu {
     .box-shadow(0 1px 2px rgba(0, 0, 0, 0.3));
@@ -30,10 +30,14 @@ body {
     padding-top: floor(@grid-gutter-width / 2);
     background: url("../images/background.jpg") repeat scroll center top;
 
+    /*&.mCS_no_scrollbar {
+        padding-right: floor(@grid-gutter-width / 2);
+    }*/
+
     .box-shadow(0 0 3px rgba(0, 0, 0, 0.5));
 
     &.no-padding {
-        padding: 0;
+        padding: 0 !important;
     }
 
     .content-header {
