--- a/web/less/variables.less
+++ b/web/less/variables.less
@@ -237,7 +237,7 @@
 //** Dropdown menu `border-color` **for IE8**.
 @dropdown-fallback-border:       #0c0c0c;
 //** Divider color for between dropdown items.
-@dropdown-divider-bg:            #0c0c0c;
+@dropdown-divider-bg:            #161616;
 
 //** Dropdown link text color.
 @dropdown-link-color:            @gray;
