--- a/src/MusicTools/MusicianBundle/Resources/views/Musician/menu.html.twig
+++ b/src/MusicTools/MusicianBundle/Resources/views/Musician/menu.html.twig
@@ -21,7 +21,7 @@
                     <i class="fa fa-user fa-stack-1x"></i>
                 </span>
 
-                My profile
+                profile
             </a>
         </li>
 
@@ -32,7 +32,7 @@
                     <i class="fa fa-envelope fa-stack-1x"></i>
                 </span>
 
-                My messages
+                messages
             </a>
         </li>
 
@@ -43,7 +43,7 @@
                     <i class="fa fa-trophy fa-stack-1x"></i>
                 </span>
 
-                My badges
+                badges
             </a>
         </li>
 
@@ -54,7 +54,7 @@
                     <i class="fa fa-gears fa-stack-1x"></i>
                 </span>
 
-                My settings
+                settings
             </a>
         </li>
 
@@ -67,7 +67,7 @@
                     <i class="fa fa-power-off fa-stack-1x"></i>
                 </span>
 
-                Sign out
+                sign out
             </a>
         </li>
     </ul>
