--- a/app/Resources/views/sidebar.html.twig
+++ b/app/Resources/views/sidebar.html.twig
@@ -18,19 +18,22 @@
 {% import _self as macros %}
 
 <nav class="sidebar">
+    {# Library links #}
     <ul>
-        {{ macros.menuItem('guitar',   'music-icon music-icon-guitar-headstock',       'link.instrument', path('guitar')) }}
-        {{ macros.menuItem('song',     'fa fa-music',          'link.song_book',  path('song')) }}
+        {{ macros.menuItem('guitar', 'music-icon music-icon-guitar-headstock', 'link.instrument', path('guitar')) }}
+        {{ macros.menuItem('song',   'fa fa-music',                            'link.song_book',  path('song'))   }}
     </ul>
 
+    {# Theory links #}
     <ul>
         {{ macros.menuItem('theory', 'fa fa-graduation-cap', 'link.theory', path('theory')) }}
-        {{ macros.menuItem('game',   'fa fa-gamepad',        'link.game',   '#') }}
+        {{ macros.menuItem('game',   'fa fa-gamepad',        'link.game',   '#')            }}
     </ul>
 
+    {# Community links #}
     <ul>
-        {{ macros.menuItem('musician', 'fa fa-users',    'link.musician', path('musician')) }}
-        {{ macros.menuItem('forum',    'fa fa-comments', 'link.forum', '#') }}
-        {{ macros.menuItem('announce', 'fa fa-bullhorn', 'link.announce', '#') }}
+        {{ macros.menuItem('musician', 'fa fa-users',    'link.musician', path('musician'))      }}
+        {{ macros.menuItem('forum',    'fa fa-comments', 'link.forum',    path('forum'))         }}
+        {{ macros.menuItem('advertisement', 'fa fa-bullhorn', 'link.advertisement', path('advertisement')) }}
     </ul>
 </nav>
