--- a/app/Resources/views/sidebar.html.twig
+++ b/app/Resources/views/sidebar.html.twig
@@ -21,7 +21,7 @@
     {# Library links #}
     <ul>
         {{ macros.menuItem('guitar', 'music-icon music-icon-guitar-headstock', 'link.instrument', path('guitar')) }}
-        {{ macros.menuItem('song',   'fa fa-music',                            'link.song_book',  path('song'))   }}
+        {{ macros.menuItem('song',   'music-icon music-icon-music-folder',                            'link.song_book',  path('song'))   }}
     </ul>
 
     {# Theory links #}
