--- a/src/MusicTools/InstrumentBundle/Resources/views/Guitar/edit.html.twig
+++ b/src/MusicTools/InstrumentBundle/Resources/views/Guitar/edit.html.twig
@@ -68,7 +68,7 @@
     {{ parent() }}
 
     {# Angular JS #}
-    {% javascripts debug=false filter='jsmin' output='vendor/angular/tuning-widget.js'
+    {% javascripts debug=false filter='jsmin' output='dist/js/tuning-widget.js'
         '@MusicToolsInstrumentBundle/Resources/public/js/tuning-widget.js'
     %}
     <script type="text/javascript" src="{{ asset_url }}"></script>
