--- a/src/MusicTools/SongBookBundle/Resources/views/Song/show.html.twig
+++ b/src/MusicTools/SongBookBundle/Resources/views/Song/show.html.twig
@@ -111,7 +111,7 @@
 {% block javascripts %}
     {{ parent() }}
 
-    {% javascripts debug=false filter='jsmin' output='vendor/angular/alphaTab.min.js'
+    {% javascripts debug=false filter='jsmin' output='dist/js/alphaTab.min.js'
         '@MusicToolsSongBookBundle/Resources/public/libraries/alphaTab/Build/JavaScript/AlphaTab.js'
         '@MusicToolsSongBookBundle/Resources/public/libraries/alphaTab/Build/JavaScript/jquery.alphaTab.js'
         '@MusicToolsSongBookBundle/Resources/public/libraries/alphaTab/Build/JavaScript/jquery.alphaTab.drop.js'
