--- a/src/MusicTools/TheoryBundle/Resources/views/Summary/index.html.twig
+++ b/src/MusicTools/TheoryBundle/Resources/views/Summary/index.html.twig
@@ -3,6 +3,9 @@
 {% block content_title %}Theory <small>Summary</small>{% endblock %}
 
 {% block content %}
-    <a href="{{ path('theory_note') }}">Notes reference</a>
-    {#<guitar-neck-widget></guitar-neck-widget>#}
+    <ul>
+        <li><a href="{{ path('theory_interval') }}">List of intervals</a></li>
+        <li><a href="{{ path('theory_note') }}">Notes reference</a></li>
+    </ul>
+
 {% endblock %}
