--- a/src/MusicTools/AdvertisementBundle/Resources/views/Advertisement/index.html.twig
+++ b/src/MusicTools/AdvertisementBundle/Resources/views/Advertisement/index.html.twig
@@ -9,9 +9,8 @@
 {% block content %}
     {#<h2>They propose...</h2>#}
 
-    <div class="advertisement-section-list" style="display: table; width: 100%; position: relative;">
-        <div class="" style="display: table-row; width: 100%;">
-        <a href="" class="advertisement-section" style="display: table-cell; height: 100%; position: relative; width: 33.3%;">
+    <div class="advertisement-section-list row">
+        <a href="" class="advertisement-section col-md-4">
             <div class="panel panel-default">
                 <img class="img-responsive" src="{{ asset('bundles/musictoolsadvertisement/images/amplifier-768536_640.jpg') }}" />
                 <div class="panel-body">
@@ -21,7 +20,7 @@
             </div>
         </a>
 
-        <a href="" class="advertisement-section" style="display: table-cell; height: 100%; position: relative; width: 33.3%;">
+        <a href="" class="advertisement-section col-md-4">
             <div class="panel panel-default">
                 <img class="img-responsive" src="{{ asset('bundles/musictoolsadvertisement/images/music-780588_640.jpg') }}" />
                 <div class="panel-body">
@@ -31,7 +30,7 @@
             </div>
         </a>
 
-        <a href="" class="advertisement-section" style="display: table-cell; height: 100%; position: relative; width: 33.3%;">
+        <a href="" class="advertisement-section col-md-4">
             <div class="panel panel-default">
                 <img class="img-responsive" src="{{ asset('bundles/musictoolsadvertisement/images/music-691012_640.jpg') }}" />
                 <div class="panel-body">
@@ -40,7 +39,6 @@
                 </div>
             </div>
         </a>
-        </div>
     </div>
 
     {#<h2>They are looking for...</h2>#}
