--- a/src/MusicTools/TheoryBundle/Resources/views/Interval/index.html.twig
+++ b/src/MusicTools/TheoryBundle/Resources/views/Interval/index.html.twig
@@ -1,8 +1,8 @@
 {% extends '::base.html.twig' %}
 
-{% block content %}
-    <h1 class="page-header">Intervals</h1>
+{% block content_title %}Theory <small>Intervals</small>{% endblock %}
 
+{% block content %}
     <div class="panel panel-default">
         <table class="table table-hover table-stripped">
             <thead>
