--- a/web/fonts/MusicFont/less/path.less
+++ b/web/fonts/MusicFont/less/path.less
@@ -3,10 +3,10 @@
 
 @font-face {
     font-family: 'MusicFont';
-    src: url('@{music-icon-font-path}/MusicFont.eot}');
-    src: url('@{music-icon-font-path}/MusicFont.eot?#iefix') format('embedded-opentype'),
-         url('@{music-icon-font-path}/MusicFont.ttf') format('truetype'),
-         url('@{music-icon-font-path}/MusicFont.svg') format('svg');
+    src: url('@{music-icon-font-path}/fonts/MusicFont.eot}');
+    src: url('@{music-icon-font-path}/fonts/MusicFont.eot?#iefix') format('embedded-opentype'),
+         url('@{music-icon-font-path}/fonts/MusicFont.ttf')        format('truetype'),
+         url('@{music-icon-font-path}/fonts/MusicFont.svg')        format('svg');
     font-weight: normal;
     font-style: normal;
 }
