--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -96,7 +96,10 @@
         '@MusicToolsInstrumentBundle/Resources/public/js/Guitar/*'
         '@MusicToolsInstrumentBundle/Resources/public/js/Guitar/Directive/*'
         '@MusicToolsInstrumentBundle/Resources/public/js/GuitarNeck/*'
+        '@MusicToolsInstrumentBundle/Resources/public/js/GuitarNeck/Controller/*'
+        '@MusicToolsInstrumentBundle/Resources/public/js/GuitarNeck/Controller/Layer/*'
         '@MusicToolsInstrumentBundle/Resources/public/js/GuitarNeck/Directive/*'
+        '@MusicToolsInstrumentBundle/Resources/public/js/GuitarNeck/Directive/Layer/*'
         '@MusicToolsSongBookBundle/Resources/public/js/SheetMusic/*'
         '@MusicToolsSongBookBundle/Resources/public/js/SheetMusic/Controller/*'
         '@MusicToolsSongBookBundle/Resources/public/js/SheetMusic/Directive/*'
