--- a/src/MusicTools/InstrumentBundle/Resources/public/js/GuitarNeck/Partial/GuitarNeck.html
+++ b/src/MusicTools/InstrumentBundle/Resources/public/js/GuitarNeck/Partial/GuitarNeck.html
@@ -1,3 +1,4 @@
-<div class="guitar-neck">
-    <frets-layer data-fret-first="" data-fret-last=""></frets-layer>
+<div class="guitar-neck" style="height: {{ guitarNeckCtrl.height }}px;">
+    <fret-layer data-fret-first="0" data-fret-last="24" data-fret-count="24"></fret-layer>
+    <string-layer></string-layer>
 </div>
