--- a/web/less/app.less
+++ b/web/less/app.less
@@ -17,6 +17,7 @@
 
 @import "components/header";
 @import "components/sidebar";
+@import "components/wizard";
 
 @import "theme";
 
@@ -25,7 +26,9 @@
 @import "bundles/user";
 @import "bundles/theory";
 @import "bundles/song_book";
+@import "bundles/instrument";
 @import "bundles/guitar";
+@import "bundles/guitar_neck";
 @import "bundles/musician";
 @import "bundles/sheet_music";
 @import "bundles/advertisement";
