--- a/web/less/components/sidebar.less
+++ b/web/less/components/sidebar.less
@@ -67,4 +67,12 @@
     & + .content {
         margin-left: @sidebar-width;
     }
+
+    .tooltip {
+        white-space: nowrap;
+        font-size: @font-size-large;
+        color: @brand-primary !important;
+        /*padding-left: 15px;
+        padding-right: 15px;*/
+    }
 }
