--- a/app/Resources/views/header-authenticated.html.twig
+++ b/app/Resources/views/header-authenticated.html.twig
@@ -16,8 +16,8 @@
             <guitar-menu class="nav navbar-nav"></guitar-menu>
 
             <ul class="nav navbar-nav">
-                <li class="nav-link-default">
-                    <a href="" style="font-size: 28px;">
+                <li class="nav-link-default" data-note-display-switch="" data-ng-class="{ 'active': noteDisplaySwitchCtrl.displayFlat }">
+                    <a href="" style="font-size: 28px;" data-ng-click="noteDisplaySwitchCtrl.switchDisplay()">
                         &#9837;
                     </a>
                 </li>
