--- a/src/MusicTools/TheoryBundle/Resources/public/js/Note/Partial/list.html
+++ b/src/MusicTools/TheoryBundle/Resources/public/js/Note/Partial/list.html
@@ -1,3 +1,3 @@
 <ul class="note-list list-group">
-    <li class="list-group-item" data-ng-repeat="note in notes">{{ note.sharpName }}</li>
+    <li class="list-group-item" data-ng-repeat="note in notes">{{ note.name }}</li>
 </ul>
