--- a/web/less/theme.less
+++ b/web/less/theme.less
@@ -11,11 +11,17 @@ body {
 
 h1, h2, h3, h4, h5, h6,
 .h1, .h2, .h3, .h4, .h5, .h6 {
-    font-variant: small-caps;
+    /*font-variant: small-caps;*/
 
     small {
         font-variant: normal;
     }
+}
+
+h2, .h2 {
+    margin-top: floor(@grid-gutter-width / 2);
+    font-size: 18px;
+    color: @gray;
 }
 
 .dropdown-menu {
@@ -41,7 +47,7 @@ h1, h2, h3, h4, h5, h6,
     }
 
     .content-header {
-        margin-bottom: @line-height-computed;
+        margin-bottom: floor(@grid-gutter-width / 2);
 
         h1 {
             color: @brand-primary;
@@ -49,6 +55,7 @@ h1, h2, h3, h4, h5, h6,
             padding: 0;
             margin: 0;
             font-size: 22px;
+            font-variant: small-caps;
         }
     }
     .page-header {
@@ -57,6 +64,7 @@ h1, h2, h3, h4, h5, h6,
         font-size: 20px;
         font-weight: 100;
         padding-bottom: 0;
+        font-variant: small-caps;
 
         &:first-child {
             margin-top: 0;
