--- a/web/client/less/app/app.less
+++ b/web/client/less/app/app.less
@@ -12,13 +12,18 @@
 // Loading bar
 @import "@{lib-path}/angular-loading-bar/build/loading-bar.css";
 
+// Scrollbar
+@import "@{lib-path}/malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar.min.css";
+
 // Variables (override bootstrap default)
 @import "variables";
 @import "variables.custom.less";
 
 @import "boilerplate.less";
 
+@import "components/alerts.less";
 @import "components/buttons.less";
+@import "components/fields.less";
 @import "components/forms.less";
 @import "components/header.less";
 @import "components/sidebar.less";
