--- a/web/client/less/app/components/buttons.less
+++ b/web/client/less/app/components/buttons.less
@@ -1,6 +1,10 @@
+.btn {
+    border: none;
+}
+
 .button-round-variant(@color) {
     color: @color;
-    border-color: @color;
+    border: 1px solid @color;
     background: none;
     border-radius: 60px;
     text-align: center;
