--- a/web/client/less/app/theme.less
+++ b/web/client/less/app/theme.less
@@ -38,6 +38,7 @@ h2, .h2 {
     height: 100%;
     overflow-y: auto;
     padding-top: floor(@grid-gutter-width / 2);
+    padding-bottom: floor(@grid-gutter-width / 2);
     background: url("../images/background.jpg") repeat scroll center top;
 
     .box-shadow(0 0 3px rgba(0, 0, 0, 0.5));
