--- a/web/client/app/SongBook/Partial/form.html
+++ b/web/client/app/SongBook/Partial/form.html
@@ -23,7 +23,7 @@
         <!-- Validate form -->
         <layout-page-button class="nav-link-default">
             <!--data-ng-click="songFormCtrl.validate()"-->
-            <a href="" ng-click="uploadPic(picFile)">
+            <a href="" data-ng-click="songFormCtrl.validate()">
                 <span class="fa fa-fw fa-check"></span>
                 <span data-ng-if="songFormCtrl.isNew()">Create</span>
                 <span data-ng-if="!songFormCtrl.isNew()">Edit</span>
@@ -40,29 +40,35 @@
     </layout-page-buttons>
 
     <!-- Form -->
-    <div class="row">
+    <form-component data-form-def="songFormCtrl.form">
         <div class="col-md-3">
-            <!--<input type="file" data-ngf-select="" data-ng-model="songFormCtrl.entity.cover" name="file" accept="image/*" data-ngf-max-size="2MB" />
-            <img ng-show="songFormCtrl.entity.cover.$valid" ngf-thumbnail="songFormCtrl.entity.cover" class="thumb" />-->
+            <div data-ngf-drop="" data-ng-model="songFormCtrl.entity.cover.file" class="file-upload-dropbox" accept="image/*" ngf-max-size="2MB">
+                <div class="dropbox-info" data-ng-hide="songFormCtrl.entity.cover.file">
+                    <span class="fa fa-music"></span>
+                    Cover of the album
+                </div>
 
-            <fieldset>
-                Photo:
-                <input type="file" ngf-select ng-model="picFile" name="file"
-                       accept="image/*" ngf-max-size="2MB" required>
-                <i ng-show="myForm.file.$error.required">*required</i><br>
-                <i ng-show="myForm.file.$error.maxSize">File too large
-                    {{picFile.size / 1000000|number:1}}MB: max 2M</i>
-                <img ng-show="myForm.file.$valid" ngf-thumbnail="picFile" class="thumb"> <button ng-click="picFile = null" ng-show="picFile">Remove</button>
-                <br>
-                <button ng-disabled="!myForm.$valid"
-                        >Submit</button>
-                  <span class="progress" ng-show="picFile.progress >= 0">
-                    <div style="width:{{ picFile.progress }}%"
-                         ng-bind="picFile.progress + '%'"></div>
-                  </span>
-                <span ng-show="picFile.result">Upload Successful</span>
-                <span class="err" ng-show="errorMsg">{{errorMsg}}</span>
-            </fieldset>
+                <div class="dropbox-thumb">
+                    <img class="img-responsive" data-ngf-thumbnail="songFormCtrl.entity.cover.file" data-ng-show="songFormCtrl.entity.cover.file" />
+
+                    <a href="" role="button" class="btn btn-danger" data-ng-click="songFormCtrl.entity.cover.file = null" data-ng-show="songFormCtrl.entity.cover.file">
+                        <span class="fa fa-trash-o"></span>
+                        <span class="sr-only">Remove upload file</span>
+                    </a>
+                </div>
+            </div>
+
+            <i ng-show="myForm.file.$error.required">*required</i><br>
+            <i ng-show="myForm.file.$error.maxSize">File too large {{picFile.size / 1000000|number:1}}MB: max 2M</i>
+
+            <br>
+
+            <span class="progress" ng-show="picFile.progress >= 0">
+                <div style="width:{{ picFile.progress }}%" ng-bind="picFile.progress + '%'"></div>
+            </span>
+
+            <span ng-show="picFile.result">Upload Successful</span>
+            <span class="err" ng-show="errorMsg">{{errorMsg}}</span>
         </div>
 
         <div class="col-md-9">
@@ -77,23 +83,8 @@
                         <label for="song_artist" class="control-label">Artist</label>
                         <input type="text" class="form-control" name="song_artist" id="song_artist" data-ng-model="songFormCtrl.entity.artist" />
                     </div>
-
-                    <!--{{ form_row(form.rating) }}-->
-                    <!--{{ form_row(form.mastery) }}-->
                 </div>
             </div>
-
-            <!--<div class="text-right">
-                <button type="submit" class="btn btn-primary">
-                    <span class="fa fa-check"></span>
-                    Create
-                </button>
-
-                <a href="{{ path('song') }}" class="btn btn-default">
-                    <span class="fa fa-times"></span>
-                    Cancel
-                </a>
-            </div>-->
         </div>
-    </div>
+    </form-component>
 </layout-page>
