update SongBook UI

--- a/web/client/app/SongBook/Partial/form.html
+++ b/web/client/app/SongBook/Partial/form.html
@@ -49,7 +49,7 @@
                 </div>
 
                 <div class="dropbox-thumb">
-                    <img class="img-responsive" data-ngf-thumbnail="songFormCtrl.entity.cover.file" data-ng-show="songFormCtrl.entity.cover.file" />
+                    <img class="img-responsive img-shadow" data-ngf-thumbnail="songFormCtrl.entity.cover.file" data-ng-show="songFormCtrl.entity.cover.file" />
 
                     <a href="" role="button" class="btn btn-danger" data-ng-click="songFormCtrl.entity.cover.file = null" data-ng-show="songFormCtrl.entity.cover.file">
                         <span class="fa fa-trash-o"></span>
