--- a/web/client/app/SongBook/Partial/show.html
+++ b/web/client/app/SongBook/Partial/show.html
@@ -19,15 +19,9 @@
     <div class="row">
         <!-- Song cover -->
         <div class="col-md-3 text-center">
-            <!--{% if entity.cover is not empty %}
-            <img src="{{ asset(resource_path(entity.cover)) }}" class="img-responsive img-shadow" style="margin-bottom: 20px;"/>
-            {% else %}
-            <div class="text-center big-icon">
-                <span class="fa fa-music"></span>
-            </div>
-            {% endif %}
+            <img class="img-responsive img-shadow" data-ng-src="{{ (songShowCtrl.entity.cover.path || 'uploads/no-cover.png')|resource_path }}" />
 
-            <div class="row">
+            <!-- <div class="row">
                 <div class="col-md-12 text-center" style="margin-bottom: 20px;">
                     Rating
                     {{ fields.score_show(entity.rating, 0, 10, 'fa fa-fw fa-lg fa-heart', 'fa fa-fw fa-lg fa-heart-o') }}
