--- a/web/client/less/app/app.less
+++ b/web/client/less/app/app.less
@@ -12,9 +12,6 @@
 // Loading bar
 @import "@{lib-path}/angular-loading-bar/build/loading-bar.css";
 
-// Scrollbar
-@import "@{lib-path}/malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar.min.css";
-
 // Variables (override bootstrap default)
 @import "variables";
 @import "variables.custom.less";
@@ -26,9 +23,11 @@
 @import "components/fields.less";
 @import "components/forms.less";
 @import "components/header.less";
+@import "components/list.less";
 @import "components/sidebar.less";
 @import "components/wizard.less";
 @import "components/page.less";
+@import "components/scrollbar.less";
 @import "components/navbar.less";
 
 @import "theme.less";
