--- a/web/client/less/app/theme.less
+++ b/web/client/less/app/theme.less
@@ -57,6 +57,7 @@ h2, .h2 {
             margin: 0;
             font-size: 22px;
             font-variant: small-caps;
+            position: relative;
         }
     }
     .page-header {
@@ -109,11 +110,8 @@ h2, .h2 {
 
 .panel {
     .box-shadow(none);
-}
-
-.empty-list {
-    font-style: italic;
-    text-align: center;
+    border: none;
+    margin-bottom: 15px;
 }
 
 .login-form,
