--- a/web/client/less/app/bundles/song_book.less
+++ b/web/client/less/app/bundles/song_book.less
@@ -3,7 +3,10 @@
  */
 .song-list {
     .song-item {
-
+        .cover {
+            padding-left: 0;
+            padding-right: 0;
+        }
     }
 }
 
