--- a/web/client/less/app/components/fields.less
+++ b/web/client/less/app/components/fields.less
@@ -18,12 +18,12 @@
         text-align: center;
         font-size: 22px;
 
-        .fa {
+        /*.fa {
 
             display: block;
             font-size: 140px;
             padding: 25px;
-        }
+        }*/
     }
 
     .dropbox-thumb {
