--- a/web/client/less/fonts/MusicFont/less/path.less
+++ b/web/client/less/fonts/MusicFont/less/path.less
@@ -3,10 +3,10 @@
 
 @font-face {
     font-family: 'MusicFont';
-    src: url('@{music-icon-font-path}/fonts/MusicFont.eot}');
-    src: url('@{music-icon-font-path}/fonts/MusicFont.eot?#iefix') format('embedded-opentype'),
+    src: url('@{music-icon-font-path}/fonts/MusicFont.otf');
+    /*src: url('@{music-icon-font-path}/fonts/MusicFont.eot?#iefix') format('embedded-opentype'),
          url('@{music-icon-font-path}/fonts/MusicFont.ttf')        format('truetype'),
-         url('@{music-icon-font-path}/fonts/MusicFont.svg')        format('svg');
+         url('@{music-icon-font-path}/fonts/MusicFont.svg')        format('svg');*/
     font-weight: normal;
     font-style: normal;
 }
