--- a/web/client/less/fonts/MusicFont/less/variables.less
+++ b/web/client/less/fonts/MusicFont/less/variables.less
@@ -7,6 +7,8 @@
 @music-icon-border-color:     #eee;
 @music-icon-inverse:          #fff;
 
-@music-icon-var-guitar-headstock: "\061";
-@music-icon-var-tuning:           "\062";
-@music-icon-var-music-folder:     "\063";
+@music-icon-var-guitar-headstock: "\041";
+@music-icon-var-tuning:           "\042";
+@music-icon-var-music-folder:     "\043";
+@music-icon-var-note:             "\044";
+@music-icon-var-note-o:           "\045";
