--- a/web/client/less/app/bundles/user.less
+++ b/web/client/less/app/bundles/user.less
@@ -60,6 +60,10 @@
         padding-top: 0;
         border-radius: 3px;
 
+        li {
+            border: none;
+        }
+
         a {
             padding: 5px 15px;
 
@@ -86,6 +90,6 @@
         padding-bottom: 0;
         font-size: @font-size-large;
         font-weight: 600;
-        border-bottom: 1px dashed @brand-primary;
+        border-bottom: 1px dashed @brand-primary !important;
     }
 }
