--- a/web/client/less/app/bundles/guitar.less
+++ b/web/client/less/app/bundles/guitar.less
@@ -35,6 +35,7 @@
 
         .caret {
             vertical-align: top;
+            margin-left: 0;
         }
     }
 
@@ -80,7 +81,7 @@
             line-height: 20px;
             position: absolute;
             right: 15px;
-            top: 12px;
+            top: 10px;
 
             color: darken(@dropdown-bg, 2%);
         }
