--- a/web/client/less/app/components/dropdown.less
+++ b/web/client/less/app/components/dropdown.less
@@ -11,6 +11,10 @@
             border-bottom: 1px dashed #0c0c0c;
         }
 
+        a {
+            padding: 5px 20px;
+        }
+
         .fa-check {
             position: absolute;
             right: 15px;
