--- a/web/client/less/app/theme.less
+++ b/web/client/less/app/theme.less
@@ -9,6 +9,15 @@ body {
     padding-top: @navbar-height;
 }
 
+::selection {
+    background: black; /* WebKit/Blink Browsers */
+    color: @text-color;
+}
+::-moz-selection {
+    background: black; /* Gecko Browsers */
+    color: @text-color;
+}
+
 h1, h2, h3, h4, h5, h6,
 .h1, .h2, .h3, .h4, .h5, .h6 {
     /*font-variant: small-caps;*/
@@ -142,5 +151,23 @@ h2, .h2 {
         &:after {
 
         }
+    }
+}
+
+fieldset {
+    border: 1px solid rgba(0, 0, 0, 0.5);
+    border-radius: @border-radius-base;
+    padding: floor(@grid-gutter-width / 2);
+
+    legend {
+        color: fadeOut(@brand-primary, 60%);
+        font-size: @font-size-base;
+        /*font-weight: 900;*/
+        padding: 0 15px;
+        border: none;
+        display: inline-block;
+        margin-bottom: 0;
+        width: auto;
+        line-height: 0;
     }
 }
